* Bug #32218: adjusted buttons for Safari on iOS
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45566 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -194,6 +194,7 @@
 
 /* fonts and paddings are treated in firefox differently it seems */
 /* ... this adjustment makes sure that feels similar */
+.dj_ios.dj_safari .umc,
 .has-mozilla .umc {
 	.dijitToggleButton,
 	.dijitButton,
@@ -254,7 +255,7 @@
 .umc .dijitComboButton .dijitButtonNodeHover,
 .umc .dijitComboButton .dijitDownArrowButtonHover,
 .umc .dijitToggleButtonHover .dijitButtonNode {
-  background-color: inherit; /* DEL */
+  //background-color: inherit; /* DEL */
   color: inherit; /* DEL */
   text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
 }
@@ -263,7 +264,7 @@
 .umc .dijitDropDownButtonActive .dijitButtonNode,
 .umc .dijitComboButtonActive .dijitButtonNode,
 .umc .dijitToggleButtonActive .dijitButtonNode {
-  background-color: inherit; /* DEL */
+  //background-color: inherit; /* DEL */
   .box-shadow(inherit); /* DEL */
   .transition-duration(inherit); /* DEL */
 }
